Fixed some generics